Modify upstream artifact group of iterative extensions.
Port some projects of iterative extensions
from asakusafw-compiler to asakusafw repository.

See:
- asakusafw/asakusafw@3c4f8d0b45c3c70dab8033eaa793476e8f82c5c1
- asakusafw/asakusafw-compiler@bbe075179ff1ceb57d2f4b41dbb6cdb21bde132e

--- a/extensions/iterativebatch/compiler/iterative/pom.xml
+++ b/extensions/iterativebatch/compiler/iterative/pom.xml
@@ -75,6 +75,10 @@ target=jvm-1.7
       <groupId>com.asakusafw</groupId>
       <artifactId>simple-graph</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.asakusafw</groupId>
+      <artifactId>asakusa-iterative-common</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>com.asakusafw.spark</groupId>
@@ -85,10 +89,6 @@ target=jvm-1.7
       <groupId>com.asakusafw.spark</groupId>
       <artifactId>asakusa-spark-compiler</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.asakusafw.iterative</groupId>
-      <artifactId>asakusa-iterative-common</artifactId>
     </dependency>
     <dependency>
       <groupId>com.asakusafw.spark.extensions</groupId>
