--- a/docs/ja/source/asakusa-on-spark/attachment/build.gradle
+++ b/docs/ja/source/asakusa-on-spark/attachment/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         maven { url 'http://asakusafw.s3.amazonaws.com/maven/releases' }
     }
     dependencies {
-        classpath group: 'com.asakusafw.spark', name: 'asakusa-spark-gradle', version: '0.2.1'
+        classpath group: 'com.asakusafw.spark', name: 'asakusa-spark-gradle', version: '0.3.0'
     }
 }
 
@@ -18,7 +18,7 @@ apply plugin: 'eclipse'
 apply plugin: 'asakusafw-spark'
 
 asakusafw {
-    asakusafwVersion '0.7.4-hadoop1'
+    asakusafwVersion '0.8.0'
 
     modelgen {
         modelgenSourcePackage 'com.example.modelgen'
@@ -39,7 +39,7 @@ dependencies {
     compile group: 'com.asakusafw.sdk', name: 'asakusa-sdk-directio', version: asakusafw.asakusafwVersion
     compile group: 'com.asakusafw.sdk', name: 'asakusa-sdk-windgate', version: asakusafw.asakusafwVersion
 
-    provided (group: 'org.apache.hadoop', name: 'hadoop-client', version: '1.2.1') {
+    provided (group: 'org.apache.hadoop', name: 'hadoop-client', version: '2.7.1') {
         exclude module: 'junit'
         exclude module: 'mockito-all'
         exclude module: 'slf4j-log4j12'
