--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -41,6 +41,10 @@ configurations {
 }
 
 repositories {
+    if (project.hasProperty('mavenLocal')) {
+        logger.lifecycle "enabling maven local repo"
+        mavenLocal()
+    }
     mavenCentral()
     maven { url 'http://asakusafw.s3.amazonaws.com/maven/releases' }
     maven { url 'http://asakusafw.s3.amazonaws.com/maven/snapshots' }
