--- a/docs/ja/source/attachment/build.gradle
+++ b/docs/ja/source/attachment/build.gradle
@@ -7,41 +7,15 @@ buildscript {
     }
 }
 
-task wrapper(type: Wrapper) {
-    distributionUrl 'http://services.gradle.org/distributions/gradle-2.8-bin.zip'
-    jarFile file('.buildtools/gradlew.jar')
-}
-
-apply plugin: 'asakusafw'
+apply plugin: 'asakusafw-sdk'
 apply plugin: 'asakusafw-organizer'
-apply plugin: 'eclipse'
+apply plugin: 'asakusafw-mapreduce'
 apply plugin: 'asakusafw-spark'
-
-asakusafw {
-    asakusafwVersion '0.8.0'
-
-    modelgen {
-        modelgenSourcePackage 'com.example.modelgen'
-    }
-    compiler {
-        compiledSourcePackage 'com.example.batchapp'
-    }
-}
-
-asakusafwOrganizer {
-    profiles.prod {
-        asakusafwVersion asakusafw.asakusafwVersion
-    }
-}
+apply plugin: 'eclipse'
 
 dependencies {
     compile group: 'com.asakusafw.sdk', name: 'asakusa-sdk-core', version: asakusafw.asakusafwVersion
     compile group: 'com.asakusafw.sdk', name: 'asakusa-sdk-directio', version: asakusafw.asakusafwVersion
     compile group: 'com.asakusafw.sdk', name: 'asakusa-sdk-windgate', version: asakusafw.asakusafwVersion
-
-    provided (group: 'org.apache.hadoop', name: 'hadoop-client', version: '2.7.1') {
-        exclude module: 'junit'
-        exclude module: 'mockito-all'
-        exclude module: 'slf4j-log4j12'
-    }
+    testRuntime group: 'com.asakusafw.sdk', name: 'asakusa-sdk-test-emulation', version: asakusafw.asakusafwVersion
 }
