--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <artifact.id>${artifact.name}-${artifact.version}</artifact.id>
 
     <asakusafw.version>0.8.0-SNAPSHOT</asakusafw.version>
+    <asakusafw-sdk.version>0.8.0-SNAPSHOT</asakusafw-sdk.version>
     <asakusafw-lang.version>0.3.0-SNAPSHOT</asakusafw-lang.version>
 
     <scala.compat.version>2.10</scala.compat.version>
