--- a/extensions/iterativebatch/runtime/core/pom.xml
+++ b/extensions/iterativebatch/runtime/core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.asakusafw.spark.extensions</groupId>
     <artifactId>asakusa-spark-extensions-iterativebatch-runtime</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.3.0-RC1</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
