--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <artifact.id>${artifact.name}-${artifact.version}</artifact.id>
 
     <asakusafw.version>0.8.0</asakusafw.version>
-    <asakusafw-sdk.version>0.8.0</asakusafw-sdk.version>
+    <asakusafw-sdk.version>0.8.1-SNAPSHOT</asakusafw-sdk.version>
     <asakusafw-lang.version>0.3.0</asakusafw-lang.version>
 
     <scala.compat.version>2.10</scala.compat.version>
