--- a/tools/asm4s/pom.xml
+++ b/tools/asm4s/pom.xml
@@ -51,8 +51,7 @@ encoding/<project>=UTF-8
               <content>
 <![CDATA[
 eclipse.preferences.version=1
-scala.compiler.additionalParams=\ -Xsource\:2.10 -Ymacro-expand\:none
-scala.compiler.installation=2.10
+scala.compiler.installation=${scala.compat.version}
 scala.compiler.useProjectSettings=true
 target=jvm-${java.version}
 ]]>
