--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -109,6 +109,10 @@ target=jvm-${java.version}
       <groupId>com.asakusafw.lang.compiler</groupId>
       <artifactId>asakusa-compiler-hadoop</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.asakusafw.lang.compiler</groupId>
+      <artifactId>asakusa-compiler-extension-directio</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>com.asakusafw.spark</groupId>
