--- a/pom.xml
+++ b/pom.xml
@@ -536,8 +536,18 @@ encoding/<project>=UTF-8
         <version>${asakusafw-lang.version}</version>
       </dependency>
       <dependency>
+        <groupId>com.asakusafw.lang.compiler</groupId>
+        <artifactId>asakusa-compiler-extension-directio</artifactId>
+        <version>${asakusafw-lang.version}</version>
+      </dependency>
+      <dependency>
         <groupId>com.asakusafw.bridge</groupId>
         <artifactId>asakusa-bridge-runtime</artifactId>
+        <version>${asakusafw-lang.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.asakusafw.bridge</groupId>
+        <artifactId>asakusa-bridge-runtime-hadoop</artifactId>
         <version>${asakusafw-lang.version}</version>
       </dependency>
       <dependency>
