--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -73,6 +73,10 @@ target=jvm-${java.version}
       <artifactId>asakusa-bridge-runtime</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.asakusafw.bridge</groupId>
+      <artifactId>asakusa-bridge-runtime-hadoop</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.asakusafw.iterative</groupId>
       <artifactId>asakusa-iterative-launch</artifactId>
     </dependency>
