--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     <asakusafw-sdk.version>0.9.0-SNAPSHOT</asakusafw-sdk.version>
     <asakusafw-lang.version>0.4.0-SNAPSHOT</asakusafw-lang.version>
 
+    <java.version>1.8</java.version>
     <scala.compat.version>2.10</scala.compat.version>
     <scala.version>${scala.compat.version}.6</scala.version>
     <spark.version>1.6.2</spark.version>
@@ -86,8 +87,8 @@
           <version>3.2</version>
           <configuration>
             <fork>true</fork>
-            <source>1.7</source>
-            <target>1.7</target>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
             <encoding>UTF-8</encoding>
             <proc>none</proc>
           </configuration>
@@ -183,12 +184,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-eclipse-plugin</artifactId>
-          <version>2.9</version>
+          <version>2.10</version>
           <configuration>
             <downloadSources>true</downloadSources>
             <downloadJavadocs>false</downloadJavadocs>
             <classpathContainers>
-              <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7</classpathContainer>
+              <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-${java.version}</classpathContainer>
             </classpathContainers>
             <additionalConfig>
               <file>
