--- a/extensions/iterativebatch/runtime/iterative/pom.xml
+++ b/extensions/iterativebatch/runtime/iterative/pom.xml
@@ -171,6 +171,7 @@ target=jvm-${java.version}
               <artifactId>scala-maven-plugin</artifactId>
               <configuration>
                 <args>
+                  <arg>-target:jvm-${java.version}</arg>
                   <arg>-Xdisable-assertions</arg>
                 </args>
               </configuration>
