--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,11 @@
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
           <version>3.2.0</version>
+          <configuration>
+            <args>
+              <arg>-target:jvm-${java.version}</arg>
+            </args>
+          </configuration>
           <executions>
             <execution>
               <goals>
