--- a/extensions/iterativebatch/runtime/iterative/pom.xml
+++ b/extensions/iterativebatch/runtime/iterative/pom.xml
@@ -52,6 +52,7 @@ eclipse.preferences.version=1
 scala.compiler.installation=${scala.compat.version}
 scala.compiler.useProjectSettings=true
 target=jvm-${java.version}
+feature=true
 ]]>
               </content>
             </file>
@@ -172,6 +173,7 @@ target=jvm-${java.version}
               <configuration>
                 <args>
                   <arg>-target:jvm-${java.version}</arg>
+                  <arg>-feature</arg>
                   <arg>-Xdisable-assertions</arg>
                 </args>
               </configuration>
