--- a/pom.xml
+++ b/pom.xml
@@ -171,10 +171,11 @@
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
-          <version>3.2.0</version>
+          <version>3.2.2</version>
           <configuration>
             <args>
               <arg>-target:jvm-${java.version}</arg>
+              <arg>-feature</arg>
             </args>
           </configuration>
           <executions>
