--- a/tools/asm4s/pom.xml
+++ b/tools/asm4s/pom.xml
@@ -54,6 +54,7 @@ eclipse.preferences.version=1
 scala.compiler.installation=${scala.compat.version}
 scala.compiler.useProjectSettings=true
 target=jvm-${java.version}
+feature=true
 ]]>
               </content>
             </file>
