--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.asakusafw.spark</groupId>
   <artifactId>asakusa-spark</artifactId>
   <packaging>pom</packaging>
-  <version>0.4.1-SNAPSHOT</version>
+  <version>0.4.1-RC2</version>
 
   <description>Asakusa DSL Compiler for Spark Project Root</description>
   <url>http://asakusafw.com</url>
@@ -28,7 +28,7 @@
     <connection>scm:git:git@github.com:asakusafw/asakusafw-spark.git</connection>
     <developerConnection>scm:git:git@github.com:asakusafw/asakusafw-spark.git</developerConnection>
     <url>https://github.com/asakusafw/asakusafw-spark</url>
-    <tag>HEAD</tag>
+    <tag>0.4.1-RC2</tag>
   </scm>
 
   <properties>
