--- a/integration/src/integration-test/data/spark/build.gradle
+++ b/integration/src/integration-test/data/spark/build.gradle
@@ -32,6 +32,9 @@ asakusafw {
 }
 
 asakusafwOrganizer {
+    hadoop {
+        embed !System.getenv('HADOOP_CMD')
+    }
     profiles.dev {
         assembly.into('.') {
             from 'src/main/conf'
