Remove asakusafw-sdk.version

--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -21,7 +21,6 @@ ext.parentPom = { f ->
     return [
         projectVersion : xml.version.text(),
         coreVersion : xml['properties']['asakusafw.version'].text(),
-        sdkVersion : xml['properties']['asakusafw-sdk.version'].text(),
         langVersion : xml['properties']['asakusafw-lang.version'].text(),
         sparkVersion : xml['properties']['spark.version'].text(),
         hadoopVersion : xml['properties']['hadoop.version'].text(),
@@ -56,7 +55,7 @@ dependencies {
     compile gradleApi()
     compile group: 'com.asakusafw.lang', name: 'asakusa-lang-gradle', version: parentPom.langVersion
     testCompile gradleTestKit()
-    testCompile group: 'com.asakusafw', name: 'asakusa-gradle-plugins', version: parentPom.sdkVersion, classifier: 'tests'
+    testCompile group: 'com.asakusafw', name: 'asakusa-gradle-plugins', version: parentPom.coreVersion, classifier: 'tests'
     testCompile 'junit:junit:4.11'
     deployerJars 'org.springframework.build:aws-maven:5.0.0.RELEASE'
 }
@@ -107,7 +106,6 @@ processResources {
         Properties p = new Properties()
         p.put('feature-version', parentPom.projectVersion)
         p.put("core-version", parentPom.coreVersion)
-        p.put("sdk-version", parentPom.sdkVersion)
         p.put('lang-version', parentPom.langVersion)
         p.put('spark-version', parentPom.sparkVersion)
         p.put('hadoop-version', parentPom.hadoopVersion)
