--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
     <artifact.version>${project.version}</artifact.version>
     <artifact.id>${artifact.name}-${artifact.version}</artifact.id>
 
-    <asakusafw.version>0.9.2-RC1</asakusafw.version>
-    <asakusafw-lang.version>0.4.2-RC1</asakusafw-lang.version>
+    <asakusafw.version>0.9.2-SNAPSHOT</asakusafw.version>
+    <asakusafw-lang.version>0.4.2-SNAPSHOT</asakusafw-lang.version>
 
     <java.version>1.8</java.version>
     <scala.compat.version>2.11</scala.compat.version>
