--- a/extensions/iterativebatch/compiler/core/pom.xml
+++ b/extensions/iterativebatch/compiler/core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.asakusafw.spark.extensions</groupId>
     <artifactId>asakusa-spark-extensions-iterativebatch-compiler</artifactId>
-    <version>0.4.2-SNAPSHOT</version>
+    <version>0.4.2</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
