`asakusa run` now can execute Spark on Windows.
This is an imcomplete implementation because Spark raises
error logs after finished its task. It seems that Spark
could not delete some temporary files/directories.

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
     <module>extensions</module>
     <module>test-adapter</module>
     <module>assembly</module>
+    <module>bootstrap</module>
   </modules>
 
   <build>
@@ -146,6 +147,11 @@
               </manifestEntries>
             </archive>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>3.0.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
